--- a/index.css
+++ b/index.css
@@ -29,6 +29,32 @@
     padding-top: 4em;
   }
 
+     .meter{
+      height: 20px;
+         width: 80%;
+         background: red;
+         margin-bottom: 10px;
+         margin-left: -10%;
+         position: relative;
+         display:  flex;
+         justify-content: flex-start;
+         align-items: center;
+         border-radius: 30px;
+         background: hsl(229, 54%, 18%);
+
+
+
+  }
+
+  .fill{
+  height: 14px;
+  width: 80%;
+  left: 3px;
+  background-image: linear-gradient(to right ,hsl(6, 100%, 80%) , hsl(335, 100%, 65%));
+  position: absolute;
+  border-radius: 30px;
+}
+
 
 
   header div{
@@ -86,11 +112,14 @@
     position: relative;
     height:9vh;
     width: 40%;
-    background: hsl(243, 100%, 93%);
+    border-radius: 10px;
+    background: white;
     border-radius: 10px 10px 10px 10px; 
-    top: 8%;
-    left: 100px;
+    top: 6%;
+    left: 35%;
   }
+
+ 
 
 
 
@@ -107,18 +136,18 @@
 
 
   .values{
-    display: flex;
-    justify-content: space-around;
+   position: absolute;
+  right:15%;
+  }
+
+  .value{
+    padding-left: 8%;
   }
 
 
-
-
-
-
-
-
    .attribution { 
+    /*postion:absolute;
+    top:80%;*/
     font-size: 11px; 
     text-align: center; 
     margin-top: 8em;
@@ -131,19 +160,19 @@
 
     @media (min-width:600px){
       body{
-            background: url("./images/bg-desktop.png");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
+            background: hsl(229, 57%, 11%);
+ 
       }
-
-      
 
       main{
         
-
+        background: url("./images/bg-desktop.png");
+         position: absolute;
+        bottom: 0;
+        height: 50%;
+        width: 100%;
         display: flex;
-        justify-content: normal;
+        justify-content: center;
       }
 
 
@@ -161,30 +190,50 @@
    
       }
 
-
-
       .section_2 > p{
         text-align: start;
         font-size: 16px;
         margin-left: 2em;
      }
-
+/*
      progress[value] {
         width: 80%;
         height: 30px;
     
-     }
+     }*/
+
 
      .bottom {
  
-      top: -80%;
-      left: 50%;
+      top: -110%;
+      left: 37%;
     }
 
+     .bottom::after{
+  content: "";
+  position: absolute;
+  display: inline-block;
+  height: 0px;
+  width: 0px;
+  background: transparent;
+  right: 0;
+  top: 50px;
+  border: solid;
+  border-width: 20px;
+  border-color: white;
+  border-left-color: transparent;
+  border-bottom-color: transparent;
 
-      .values{
-      display: flex;
-      justify-content: space-around;
+}
+
+
+    .meter{
+      
+         margin-left:0;
+         
+
+
+
   }
 
 
@@ -194,19 +243,13 @@
 
 
 
-
-     
-
-
-
-
         .section_1{
 
           width:25%;
           height: 30vh;
           background: hsl(228, 56%, 26%);
-          margin-left: 20%;
-          margin-top:40vh;
+          position: relative;
+          top:-70%;
        
 
       }
@@ -218,12 +261,22 @@
           width:40%;
           height:23vh;
           background: hsl(228, 56%, 26%);
-       
-          margin-top:47vh;
-          font-size: 14px;
+          position: relative;
+          top:-12%;
           color: hsl(229, 7%, 55%)
 
       }
+
+
+      .attribution { 
+          position:absolute;
+          top:80%;
+          left: 43%;
+          font-size: 11px; 
+          text-align: center; 
+          margin-top: 8em;
+
+        }
     }
 
     @media(max-height: 568px){
